--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyecto_2
-main.class=proyecto_2.Proyecto_2
+main.class=proyecto_2.Proyecto2_corregido
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
